Introducing DefaultIterationContext.